--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Definindo variáveis de cores e fontes globais */
 :root {
-  --branco: #f3eeea;
+  --bege: #f3eeea;
   --verde-claro: #00bf63;
   --verde-escuro: #4f6f52;
   --cinza: #464646;
@@ -62,6 +62,7 @@ section.menu {
 .menu__list {
   display: flex;
   gap: 32px;
+  align-items: center;
 }
 
 /* Estilos para itens da lista do menu */
@@ -98,11 +99,6 @@ section.menu {
   text-decoration: none;
 }
 
-/* Estilos para o menu hamburger em telas menores */
-.menu__list__item button.hamburger {
-  display: block; /* Mostrar o hamburger em telas menores */
-}
-
 /* Estilos para o menu dropdown */
 .menu__dropdown {
   display: none;
@@ -110,7 +106,7 @@ section.menu {
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: var(--cinza);
+  background-color: blue;
   border-radius: 4px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1;
@@ -134,18 +130,18 @@ section.menu {
 @media screen and (max-width: 769px) {
   section.menu {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 16px;
   }
 
   .logo {
-    margin-bottom: 16px;
+    margin-bottom: 10px;
   }
 
   .menu__list {
     display: none; /* Ocultar a lista em telas menores */
     flex-direction: column;
-    gap: 16px;
+    gap: 1px;
     position: absolute;
     top: calc(100% + 16px); /* Posiciona a lista abaixo do botão hamburger */
     left: 0;
@@ -158,9 +154,18 @@ section.menu {
   .menu__list__item {
     margin-bottom: 8px;
   }
+  
 
   .menu__list__item button.hamburger {
-    display: block; /* Mostrar o hamburger em telas menores */
+    display: block;
+    background-color: transparent;
+    color: var(--preto);
+    border: none;
+    border-radius: 4px;
+    padding: 6px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: color 0.3s ease;
   }
 
   .menu__list__item button.close {
@@ -179,7 +184,10 @@ section.menu {
     top: 100%;
     left: 0;
   }
+  
 }
+
+
 
 /* Estilos para a seção de menu em dispositivos maiores */
 @media screen and (min-width: 770px) {
@@ -188,10 +196,10 @@ section.menu {
   }
 
   .menu__list__item button.hamburger {
-    display: none; /* Ocultar o hamburger em telas maiores */
+    display: block; /* Mostrar o hamburger em telas maiores */
+    margin-right: 16px; /* Adicionar margem à direita para separar da logo */
   }
 }
-
 
 
 
