--- a/style.css
+++ b/style.css
@@ -157,17 +157,33 @@ section.menu {
   .menu__list__item {
     margin-bottom: 8px;
   }
+  .menu-toggle i {
+    font-size: 24px; /* Defina o tamanho desejado para o ícone */
+    margin-bottom: -5px;
+    color: green;
+  }
 
   .menu__list__item button.menu-toggle {
     display: block;
-    background-color: transparent;
-    color: var(--verde-claro);
+    background-color: var(--verde-claro); /* Fundo verde */
+    color: var(--preto);
     border: none;
-    border-radius: 4px;
-    padding: 6px;
+    border-radius: 0;
+    padding: 16px 32px; /* Adicionando padding horizontal */
+    width: 100%;
+    text-align: left;
     font-size: 1.5rem;
     cursor: pointer;
-    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
+  }
+
+  .menu__list__item button.menu-toggle i {
+    margin-right: 8px; /* Espaçamento entre o ícone e o texto */
+    font-size: 1.8rem; /* Aumenta o tamanho do ícone */
+  }
+
+  .menu__list__item button.menu-toggle:hover {
+    background-color: var(--verde-escuro); /* Verde mais escuro ao passar o mouse */
   }
 
   .menu__dropdown {
