--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 /* Estilos globais para o corpo da página */
 body {
-  box-sizing: border-box;
   background-color: var(--branco);
   font-family: var(--font-principal);
   margin: 0;
@@ -42,8 +41,6 @@ a {
 html {
   scroll-behavior: smooth;
 }
-
-
 
 /* Estilos para a seção de menu */
 header.menu {
@@ -230,7 +227,6 @@ header.menu {
   }
 }
 
-/**/
 /* Estilos para a seção de título */
 section.title {
   margin: 24px 130px; /* Margens superior e inferior de 24px e laterais de 130px */
@@ -385,7 +381,7 @@ section.title {
 
 /* Estilos para a seção 'Sobre' */
 #sobre {
-  padding: 72px 0px;
+  padding: 72px 0;
   background-color: #111;
 }
 
@@ -405,7 +401,6 @@ section.title {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: auto;
 }
 
 /* Estilos responsivos para o container do layout 'Sobre' */
@@ -435,7 +430,6 @@ section.title {
   }
 }
 
-/* Estilos responsivos adicionais para a imagem do criador */
 @media screen and (max-width: 992px) {
   #sobre .layout-grader > div #foto-criador {
     height: 350px;
@@ -477,7 +471,7 @@ section.title {
 #sobre .layout-grader > div div:nth-child(2) h2 {
   font-size: 4rem;
   font-weight: 500;
-  margin: 16px 0px;
+  margin: 16px 0;
   color: #fff;
 }
 
@@ -508,7 +502,7 @@ section.title {
   font-size: 1.8rem;
   color: #9ca3af;
   line-height: 160%;
-  margin: 32px 0px 48px 0px;
+  margin: 32px 0 48px;
 }
 
 /* Estilos para a lista dentro da segunda div do layout 'Sobre' */
@@ -537,15 +531,7 @@ section.title {
 /* Estilos para as imagens dentro dos links da lista da segunda div do layout 'Sobre' */
 #sobre .layout-grader > div div:nth-child(2) nav ul a img {
   width: 32px;
-  height: 32px; /* Mantém proporção da imagem */
-}
-
-/* Estilos responsivos para as imagens */
-@media screen and (max-width: 1200px) {
-  #sobre .layout-grader > div div:nth-child(2) nav ul a img {
-    width: 32px;
-    height: 32px;
-  }
+  height: 32px;
 }
 
 /* Estilos de hover para os links da lista da segunda div do layout 'Sobre' */
@@ -556,26 +542,24 @@ section.title {
 /* Estilos para a seção 'Sobre' em dispositivos menores */
 @media screen and (max-width: 768px) {
   #sobre {
-    padding: 48px 0; /* Removido o padding lateral */
-    width: 100%; /* Ocupa toda a largura da tela */
-    box-sizing: border-box; /* Mantém a largura total incluindo padding */
+    padding: 48px 0;
   }
 
   #sobre .layout-grader > div {
     flex-direction: column;
-    align-items: center; /* Centraliza os itens na vertical */
+    align-items: center;
   }
 
   #sobre .layout-grader > div #foto-criador {
     width: 100%;
-    height: auto; /* Remove a altura fixa */
+    height: auto;
     border-radius: 16px;
     margin-bottom: 24px;
   }
 
   #sobre .layout-grader > div div:nth-child(2) {
     width: 100%;
-    text-align: center; /* Centraliza o texto */
+    text-align: center;
   }
 
   #sobre .layout-grader > div div:nth-child(2) h2 {
@@ -595,12 +579,12 @@ section.title {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto; /* Centraliza o conteúdo */
-    max-width: 1200px; /* Limita a largura máxima */
+    margin: 0 auto;
+    max-width: 1200px;
   }
 
   #sobre .layout-grader > div #foto-criador {
-    width: 45%; /* Largura reduzida para ajustar o layout */
+    width: 45%;
     height: 300px;
     border-radius: 16px;
     margin-bottom: 0;
@@ -620,6 +604,7 @@ section.title {
     font-size: 1.8rem;
   }
 }
+
 
 /* Estilos para a seção de Habilidades */
 #s-habilidades {
