--- a/style.css
+++ b/style.css
@@ -381,39 +381,28 @@ section.title {
 
 /* Estilos para a seção 'Sobre' */
 #sobre {
-  padding: 72px 0;
+  padding: 72px 20px;
   background-color: #111;
+  box-sizing: border-box;
 }
 
-/* Estilos responsivos para a seção 'Sobre' */
-@media screen and (max-width: 1200px) {
-  #sobre {
-    padding: 72px 20px;
-  }
-}
-
-/* Estilos para o container do layout 'Sobre' */
+/* Container principal */
 #sobre .layout-grader > div {
   background-color: #151515;
   border: 2px solid #1f1f1f;
   padding: 24px;
   border-radius: 4px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column; /* Mudado para coluna */
+  align-items: center; /* Centraliza verticalmente */
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
 }
 
-/* Estilos responsivos para o container do layout 'Sobre' */
-@media screen and (max-width: 1200px) {
-  #sobre .layout-grader > div {
-    flex-wrap: wrap;
-    gap: 32px;
-  }
-}
-
-/* Estilos para a imagem do criador no layout 'Sobre' */
+/* Imagem do criador */
 #sobre .layout-grader > div #foto-criador {
-  width: 47%;
+  width: 100%;
   background-image: url("assets/img/sobre-mim.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -422,27 +411,22 @@ section.title {
   height: 500px;
 }
 
-/* Estilos responsivos para a imagem do criador */
-@media screen and (max-width: 1200px) {
-  #sobre .layout-grader > div #foto-criador {
-    width: 100%;
-    height: 400px;
-  }
-}
-
 @media screen and (max-width: 992px) {
   #sobre .layout-grader > div #foto-criador {
     height: 350px;
+    border-radius: 16px;
   }
 }
 
 @media screen and (max-width: 768px) {
   #sobre .layout-grader > div #foto-criador {
-    height: 300px;
+    height: auto;
+    border-radius: 16px;
+    margin-bottom: 24px;
   }
 }
 
-/* Estilos para o título dentro do container do layout 'Sobre' */
+/* Título do criador */
 #sobre .layout-grader > div #foto-criador h3 {
   color: #111;
   background-color: #fff;
@@ -455,117 +439,35 @@ section.title {
   margin: 16px;
 }
 
-/* Estilos para a segunda div dentro do container do layout 'Sobre' */
+/* Conteúdo da segunda div */
 #sobre .layout-grader > div div:nth-child(2) {
-  width: 49%;
+  width: 100%;
+  text-align: center;
 }
 
-/* Estilos responsivos para a segunda div do layout 'Sobre' */
-@media screen and (max-width: 1200px) {
+/* Estilos responsivos para a segunda div */
+@media screen and (min-width: 769px) {
   #sobre .layout-grader > div div:nth-child(2) {
-    width: 100%;
+    width: 50%;
   }
 }
 
-/* Estilos para o título H2 dentro da segunda div do layout 'Sobre' */
+/* Títulos e textos */
 #sobre .layout-grader > div div:nth-child(2) h2 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 500;
   margin: 16px 0;
   color: #fff;
 }
 
-/* Estilos responsivos para o título H2 */
 @media screen and (max-width: 992px) {
   #sobre .layout-grader > div div:nth-child(2) h2 {
     font-size: 3.2rem;
   }
 }
 
-/* Estilos para o título H3 dentro da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) h3 {
-  font-size: 1.8rem;
-  font-weight: 300;
-  margin-bottom: 16px;
-  color: #fff;
-}
-
-/* Estilos para o título H4 dentro da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) h4 {
-  font-size: 2rem;
-  font-weight: 500;
-  color: var(--verde-claro);
-}
-
-/* Estilos para o parágrafo dentro da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) p {
-  font-size: 1.8rem;
-  color: #9ca3af;
-  line-height: 160%;
-  margin: 32px 0 48px;
-}
-
-/* Estilos para a lista dentro da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) nav ul {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  list-style-type: none;
-}
-
-/* Estilos responsivos para a lista */
-@media screen and (max-width: 1200px) {
-  #sobre .layout-grader > div div:nth-child(2) nav ul {
-    flex-wrap: wrap;
-  }
-}
-
-/* Estilos para os links dentro da lista da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) nav ul a {
-  background-color: #111;
-  border: 2px solid #1f1f1f;
-  border-radius: 6px;
-  padding: 16px;
-}
-
-/* Estilos para as imagens dentro dos links da lista da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) nav ul a img {
-  width: 32px;
-  height: 32px;
-}
-
-/* Estilos de hover para os links da lista da segunda div do layout 'Sobre' */
-#sobre .layout-grader > div div:nth-child(2) nav ul a:hover {
-  border-color: #81e54e;
-}
-
-/* Estilos para a seção 'Sobre' em dispositivos menores */
 @media screen and (max-width: 768px) {
-  #sobre {
-    padding: 48px 0;
-  }
-
-  #sobre .layout-grader > div {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #sobre .layout-grader > div #foto-criador {
-    width: 100%;
-    height: auto;
-    border-radius: 16px;
-    margin-bottom: 24px;
-  }
-
-  #sobre .layout-grader > div div:nth-child(2) {
-    width: 100%;
-    text-align: center;
-  }
-
-  #sobre .layout-grader > div div:nth-child(2) h2 {
-    font-size: 2.5rem;
-  }
-
+  #sobre .layout-grader > div div:nth-child(2) h2,
   #sobre .layout-grader > div div:nth-child(2) h3,
   #sobre .layout-grader > div div:nth-child(2) h4,
   #sobre .layout-grader > div div:nth-child(2) p {
@@ -573,38 +475,56 @@ section.title {
   }
 }
 
-/* Estilos para a seção 'Sobre' em dispositivos maiores */
-@media screen and (min-width: 769px) {
-  #sobre .layout-grader > div {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 1200px;
-  }
+#sobre .layout-grader > div div:nth-child(2) h3 {
+  font-size: 1.8rem;
+  font-weight: 300;
+  margin-bottom: 16px;
+  color: #fff;
+}
 
-  #sobre .layout-grader > div #foto-criador {
-    width: 45%;
-    height: 300px;
-    border-radius: 16px;
-    margin-bottom: 0;
-  }
+#sobre .layout-grader > div div:nth-child(2) h4 {
+  font-size: 2rem;
+  font-weight: 500;
+  color: var(--verde-claro);
+}
 
-  #sobre .layout-grader > div div:nth-child(2) {
-    width: 50%;
-  }
+#sobre .layout-grader > div div:nth-child(2) p {
+  font-size: 1.8rem;
+  color: #9ca3af;
+  line-height: 160%;
+  margin: 32px 0 48px;
+}
 
-  #sobre .layout-grader > div div:nth-child(2) h2 {
-    font-size: 3rem;
-  }
+/* Lista */
+#sobre .layout-grader > div div:nth-child(2) nav ul {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  list-style-type: none;
+}
 
-  #sobre .layout-grader > div div:nth-child(2) h3,
-  #sobre .layout-grader > div div:nth-child(2) h4,
-  #sobre .layout-grader > div div:nth-child(2) p {
-    font-size: 1.8rem;
+@media screen and (max-width: 1200px) {
+  #sobre .layout-grader > div div:nth-child(2) nav ul {
+    flex-wrap: wrap;
   }
 }
 
+/* Links da lista */
+#sobre .layout-grader > div div:nth-child(2) nav ul a {
+  background-color: #111;
+  border: 2px solid #1f1f1f;
+  border-radius: 6px;
+  padding: 16px;
+}
+
+#sobre .layout-grader > div div:nth-child(2) nav ul a img {
+  width: 32px;
+  height: 32px;
+}
+
+#sobre .layout-grader > div div:nth-child(2) nav ul a:hover {
+  border-color: #81e54e;
+}
 
 /* Estilos para a seção de Habilidades */
 #s-habilidades {
