--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
   --font-principal: "Raleway", sans-serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* Estilos globais para o corpo da página */
 body {
   background-color: var(--branco);
@@ -16,6 +22,8 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1;
+  width: 100%;
+  height: 100%;
 }
 
 /* Zerando margens e estilos de lista e parágrafos */
@@ -40,6 +48,8 @@ a {
 /* Comportamento de rolagem suave */
 html {
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
 }
 
 /* Estilos para a seção de menu */
@@ -393,11 +403,11 @@ section.title {
   padding: 24px;
   border-radius: 4px;
   display: flex;
-  flex-direction: column; /* Mudado para coluna */
-  align-items: center; /* Centraliza verticalmente */
+  flex-direction: column;
+  align-items: center;
   box-sizing: border-box;
   width: 100%;
-  margin: 0;
+  margin: 0; /* Removido qualquer margem */
 }
 
 /* Imagem do criador */
@@ -525,6 +535,9 @@ section.title {
 #sobre .layout-grader > div div:nth-child(2) nav ul a:hover {
   border-color: #81e54e;
 }
+
+
+
 
 /* Estilos para a seção de Habilidades */
 #s-habilidades {
